<resources>
    <string name="app_name">WombWise</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_calculate_button">Calculate btn</string>
    <string name="text_calculate">Calculate</string>
    <string name="desc_gestational_age_output">Gestational Age Output</string>
    <string name="text_gestational_age">Gestational Age:</string>
    <string name="desc_due_date_output">Due Date Output</string>
    <string name="text_due_date">Due Date:</string>
    <string name="text_enter_last_menstrual_period_yyyy_mm_dd">Enter Last Menstrual Period (yyyy-MM-dd)</string>
    <string name="text_due_date_calc_title">Let\'s Check When Your Little One Is Due</string>
    <string name="image_of_baby_calculating">Image of baby calculating</string>
    <string name="text_greeting_title_wombwise">WombWise</string>
    <string name="text_btn_login">Login</string>
    <string name="text_content_desc_wombwise_logo">Wombwise Logo</string>
    <string name="text_app_opening_slogan">Your trusty companion in the journey to motherhood</string>
    <string name="text_content_desc_personal_data_button">Personal Data btn</string>
    <string name="text_content_desc_size_comparison_button">Size Comparison btn</string>
    <string name="text_content_desc_weekly_track_button">Weekly Track btn</string>
    <string name="text_content_desc_calculate_due_date">Calculate Due Date</string>
    <string name="text_personal_data">Personal Data</string>
    <string name="text_weekly_track">Weekly Track</string>
    <string name="text_baby_size">Baby Size</string>
    <string name="text_calculate_due_date">Calculate Due Date</string>
    <string name="text_main_frag_title">What do you want to check today?</string>
    <string name="text_title_personal_record">Personal Record</string>
    <string name="text_please_enter_your_details">Please enter your details</string>
    <string name="text_name_et">Name</string>
    <string name="text_age_et">Age</string>
    <string name="text_insert_last_period_date">Insert last period date</string>
    <string name="text_chosen_date">January 12 2023</string>
    <string name="text_baby_gender_et">Baby gender</string>
    <string name="text_number_of_previous_pregnancies_et">Number of previous pregnancies</string>
    <string name="text_update_btn">Update</string>
    <string name="text_baby_progression_title">Baby Progression:</string>
    <string name="text_mother_progression_title">Mother Progression:</string>
    <string name="text_baby_prog_details">Baby prog details</string>
    <string name="text_baby_prog_details_weekly_details_frag">Baby prog details</string>
    <string name="text_week_number_image_content_desc">Week Number Image</string>
    <string name="text_fetus_logo_content_desc">Fetus Logo</string>
    <string name="title_month">Month</string>
    <string name="text_trimester_value">Value</string>
    <string name="title_trimester">Trimester</string>
    <string name="text_week_value">Value</string>
    <string name="title_week">Week</string>
    <string name="text_month_value">Value</string>
    <string name="title_week_size_compare">Week</string>
    <string name="text_weekly_fruit_image_content_desc">Weekly Fruit Image</string>
    <string name="text_baby_size_desc">Baby Size:</string>
    <string name="title_month_size_compare">Month</string>
    <string name="title_trimester_size_compare">Trimester</string>
    <string name="title_baby_length">Baby Length</string>
    <string name="title_baby_weight">Baby Weight</string>
    <string name="baby_length_value">Value</string>
    <string name="week_num_value">Value</string>
    <string name="month_num_value">Value</string>
    <string name="trimester_num_value">Value</string>
</resources>