<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.UserDetailsFragment">

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="32dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/title_personal_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/text_title_personal_record"
            android:textAlignment="textStart"
            android:textColor="@color/wombWisePink"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_enter_user_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_please_enter_your_details"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="12dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_name_et"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="12dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ageEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/text_age_et"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/lastPeriodDatePickerTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/text_insert_last_period_date"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <DatePicker
            android:id="@+id/lastPeriodDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:headerBackground="@color/wombWisePink" />
        <TextView
            android:id="@+id/chosenLastPeriodDate"
            android:layout_width="match_parent"
            android:text="@string/text_chosen_date"
            android:textAlignment="center"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="12dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/genderEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_baby_gender_et"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="12dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/previousPregnanciesEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_number_of_previous_pregnancies_et"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/updateDetailsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:backgroundTint="@color/wombWiseBlue"
            android:text="@string/text_update_btn"
            android:textColor="@color/wombWiseBeige" />
    </LinearLayout>



    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>