<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wombWiseBeige"
    android:padding="16dp"
    tools:context="fragments.DueDateCalcFragment">

    <TextView
        android:id="@+id/title_main_frag2"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:text="Let's Check When Your Little One Is Due"
        android:textColor="#FF948C"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_last_menstrual_period"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="date"
        android:editable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/text_enter_last_menstrual_period_yyyy_mm_dd"
        android:importantForAccessibility="yes"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/btn_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/wombWiseBlue"
        android:contentDescription="@string/desc_calculate_button"
        android:importantForAccessibility="yes"
        android:text="@string/text_calculate"
        android:textColor="@color/wombWiseBeige"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_last_menstrual_period" />

    <TextView
        android:id="@+id/title_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/desc_due_date_output"
        android:importantForAccessibility="no"
        android:text="@string/text_due_date"
        android:textColor="#4E4A4A"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calculate" />

    <TextView
        android:id="@+id/title_gestational_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/desc_gestational_age_output"
        android:importantForAccessibility="no"
        android:text="@string/text_gestational_age"
        android:textColor="#4E4A4A"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_due_date" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <ImageView
        android:id="@+id/img_baby_calculating"
        android:layout_width="160dp"
        android:layout_height="155dp"
        android:src="@drawable/baby_calculating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

</androidx.constraintlayout.widget.ConstraintLayout>